--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -27,23 +29,25 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".Tracker"/>
+        <activity android:name=".Tracker" />
         <activity android:name=".Inicio" />
         <activity android:name=".Home" />
         <activity android:name=".Singup2" />
-        <activity android:name=".Singup1"/>
+        <activity android:name=".Singup1" />
+        <activity android:name=".Profile" />
+        <activity android:name=".Settings" />
         <activity android:name=".LogIn">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".CreatePlan"></activity>
+        <activity android:name=".CreatePlan" />
         <activity android:name=".StartExercise" />
-        <activity android:name=".PlanPreview"/>
+        <activity android:name=".PlanPreview" />
         <activity android:name=".WorkoutHome" />
-        <activity android:name=".MainActivity"/>
-
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
