--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.healthcared">
+
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -15,9 +16,7 @@
         android:roundIcon="@mipmap/round_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UI.DietView"></activity>
-        <activity android:name=".UI.CreateDiet" />
-        <activity android:name=".UI.DietHome" />
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -30,6 +29,12 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
+        <activity
+            android:name=".UI.MapsActivity"
+            android:label="@string/title_activity_maps"></activity>
+        <activity android:name=".UI.DietView" />
+        <activity android:name=".UI.CreateDiet" />
+        <activity android:name=".UI.DietHome" />
         <activity android:name=".UI.Tracker" />
         <activity android:name=".UI.Inicio" />
         <activity android:name=".UI.Singup2" />
@@ -46,7 +51,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".UI.CreatePlan" />
         <activity android:name=".UI.StartExercise" />
         <activity android:name=".UI.PlanPreview" />
