- Blocked screen orientation to portrait in all activities. - Fixed log in error.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.healthcared">
 
     <!--
@@ -37,29 +38,76 @@
 
         <uses-library android:name="com.google.android.maps" />
 
-        <activity android:name=".UI.DietView" />
-        <activity android:name=".UI.CreateDiet" />
-        <activity android:name=".UI.DietHome" />
-        <activity android:name=".UI.Tracker" />
-        <activity android:name=".UI.Inicio" >
+        <activity android:name=".UI.DietView"
+                  android:screenOrientation="sensorPortrait"
+                  tools:ignore="LockedOrientationActivity"/>
+
+        <activity android:name=".UI.CreateDiet"
+                  android:screenOrientation="sensorPortrait"
+                  tools:ignore="LockedOrientationActivity"/>
+
+        <activity android:name=".UI.DietHome"
+                  android:screenOrientation="sensorPortrait"
+                  tools:ignore="LockedOrientationActivity"/>
+
+        <activity android:name=".UI.Tracker"
+                  android:screenOrientation="sensorPortrait"
+                  tools:ignore="LockedOrientationActivity"/>
+
+        <activity android:name=".UI.Inicio"
+                  android:screenOrientation="sensorPortrait"
+                  tools:ignore="LockedOrientationActivity">
+
+        </activity>
+
+        <activity android:name=".UI.Singup2"
+                  android:screenOrientation="sensorPortrait"
+                  tools:ignore="LockedOrientationActivity"/>
+
+        <activity android:name=".UI.Singup1"
+                  android:screenOrientation="sensorPortrait"
+                  tools:ignore="LockedOrientationActivity"/>
+
+        <activity android:name=".UI.Profile"
+                  android:screenOrientation="sensorPortrait"
+                  tools:ignore="LockedOrientationActivity"/>
+
+        <activity android:name=".UI.Settings"
+                  android:screenOrientation="sensorPortrait"
+                  tools:ignore="LockedOrientationActivity"/>
+
+        <activity android:name=".UI.LogIn"
+                  android:screenOrientation="sensorPortrait"
+                  tools:ignore="LockedOrientationActivity">
+        </activity>
+
+        <activity
+                  android:name=".UI.animescreen"
+                  android:theme="@style/Splashscreen"
+                  android:screenOrientation="sensorPortrait"
+            tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".UI.Singup2" />
-        <activity android:name=".UI.Singup1" />
-        <activity android:name=".UI.Profile" />
-        <activity android:name=".UI.Settings" />
-        <activity android:name=".UI.LogIn" />
-        <activity
-            android:name=".UI.animescreen"
-            android:theme="@style/Splashscreen">
-        </activity>
-        <activity android:name=".UI.CreatePlan" />
-        <activity android:name=".UI.StartExercise" />
-        <activity android:name=".UI.PlanPreview" />
-        <activity android:name=".UI.WorkoutHome" />
+
+        <activity android:name=".UI.CreatePlan"
+                  android:screenOrientation="sensorPortrait"
+                  tools:ignore="LockedOrientationActivity"/>
+
+        <activity android:name=".UI.StartExercise"
+                  android:screenOrientation="sensorPortrait"
+                  tools:ignore="LockedOrientationActivity"/>
+
+        <activity android:name=".UI.PlanPreview"
+                  android:screenOrientation="sensorPortrait"
+                  tools:ignore="LockedOrientationActivity"/>
+
+        <activity android:name=".UI.WorkoutHome"
+                  android:screenOrientation="sensorPortrait"
+                  tools:ignore="LockedOrientationActivity"/>
+
     </application>
 
 </manifest>
