--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.healthcared">
 
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the 'MyLocation' functionality.
-    -->
+    <!-- GOOGLE MAPS -->
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <!-- GOOGLE MAPS -->
 
     <application
         android:allowBackup="true"
@@ -21,22 +18,26 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <!--
-             The API key for Google Maps-based APIs is defined as a string resource.
-             (See the file "res/values/google_maps_api.xml").
-             Note that the API key is linked to the encryption key used to sign the APK.
-             You need a different API key for each encryption key, including the release key that is used to
-             sign the APK for publishing.
-             You can define the keys for the debug and release targets in src/debug/ and src/release/.
-        -->
+        <!-- GOOGLE MAPS -->
+        <uses-library android:name="com.google.android.maps" />
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
+        <!-- GOOGLE MAPS -->
 
-        <uses-library android:name="com.google.android.maps" />
+        <activity
+            android:name=".UI.animescreen"
+            android:theme="@style/Splashscreen"
+            android:screenOrientation="sensorPortrait"
+            tools:ignore="LockedOrientationActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
         <activity android:name=".UI.DietView"
                   android:screenOrientation="sensorPortrait"
@@ -79,17 +80,6 @@
         <activity android:name=".UI.LogIn"
                   android:screenOrientation="sensorPortrait"
                   tools:ignore="LockedOrientationActivity">
-        </activity>
-
-        <activity
-                  android:name=".UI.animescreen"
-                  android:theme="@style/Splashscreen"
-                  android:screenOrientation="sensorPortrait"
-            tools:ignore="LockedOrientationActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity android:name=".UI.CreatePlan"
