--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,6 @@
         android:roundIcon="@mipmap/round_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <!-- GOOGLE MAPS -->
         <uses-library android:name="com.google.android.maps" />
 
@@ -30,21 +29,21 @@
             android:screenOrientation="sensorPortrait"
             android:theme="@style/Splashscreen"
             tools:ignore="LockedOrientationActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-
         <activity
             android:name=".UI.Inicio"
             android:screenOrientation="sensorPortrait"
             tools:ignore="LockedOrientationActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity android:name=".ProgressBar"
+        <activity
+            android:name=".ProgressBar"
             android:screenOrientation="sensorPortrait"
-            tools:ignore="LockedOrientationActivity"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".UI.DietHome"
             android:screenOrientation="sensorPortrait"
