--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,10 +35,6 @@
             android:name=".UI.Inicio"
             android:screenOrientation="sensorPortrait"
             tools:ignore="LockedOrientationActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".ProgressBar"
@@ -60,7 +56,8 @@
         <activity
             android:name=".UI.Singup1"
             android:screenOrientation="sensorPortrait"
-            tools:ignore="LockedOrientationActivity" />
+            tools:ignore="LockedOrientationActivity" >
+        </activity>
         <activity
             android:name=".UI.Profile"
             android:screenOrientation="sensorPortrait"
@@ -72,7 +69,12 @@
         <activity
             android:name=".UI.LogIn"
             android:screenOrientation="sensorPortrait"
-            tools:ignore="LockedOrientationActivity" />
+            tools:ignore="LockedOrientationActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".UI.CreatePlan"
             android:screenOrientation="sensorPortrait"
