-Fixed step Storage -Added log in error display

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,8 @@ android {
         multiDexEnabled true
         targetSdkVersion 29
         versionCode 1
-        versionName "1.0"
-
+        versionName "0.1"
+        setProperty("archivesBaseName", "HealthCared-$versionName")
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
